fix nowrap song name

--- a/_dev/app/scss/elements/_waveform.scss
+++ b/_dev/app/scss/elements/_waveform.scss
@@ -39,7 +39,7 @@
 		color: #fff;
 		padding:12px 25px;
 		background:rgba(0,0,0,.9);
-
+		white-space: nowrap;
 		opacity: 0;
 		transition: 250ms ease all;
 	}
